unpackaged/main/default/objects/Case/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <label>Responsible</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMP</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>RISK</fullName>
            </value>
            <value>
                <fullName>TA</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>REV</fullName>
            </value>
            <value>
                <fullName>GUA</fullName>
            </value>
            <value>
                <fullName>CONTRACT</fullName>
            </value>
            <value>
                <fullName>SALES</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
            <value>
                <fullName>MGMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>