unpackaged/main/default/objects/Case/fields/Review_category__c.field-meta.xml
<CustomField>
    <fullName>Review_category__c</fullName>
    <label>Review category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Product Reviews</fullName>
                <default>true</default>
                <label>Product Reviews</label>
            </value>
            <value>
                <fullName>Shop Reviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>