unpackaged/main/default/objects/Case/fields/Review_Invite_sent__c.field-meta.xml
<CustomField>
    <fullName>Review_Invite_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Invite sent?</label>
    <type>Checkbox</type>
</CustomField>