unpackaged/main/default/objects/Case/fields/Signatur_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Signatur_Image_URL__c</fullName>
    <formula>IF((CONTAINS($UserRole.Name, &quot;Tech Touch 1 Market 1&quot;) || CONTAINS ($UserRole.Name, &quot;Account Management&quot;) &amp;&amp; CONTAINS ($UserRole.Name, &quot;Market 1&quot;)), &quot;https://help.etrusted.com/hc/de?utm_source=email&amp;utm_medium=CSM+AM&amp;utm_campaign=SIGNATUR_HC&amp;utm_content=Signatur&quot;,
IF($UserRole.Name = &quot;CX Manager Market 1&quot; || CONTAINS($UserRole.Name, &quot;High Touch 1 Market 1&quot;) || CONTAINS($UserRole.Name, &quot;Mid Touch 1 Market 1&quot;),&quot;https://support.trustedshops.com/de/reputation-manager&quot;,
CASE( Contact.language__c ,
&quot;de&quot;, &quot;https://support.trustedshops.com/de/produkttest&quot;,
&quot;es&quot;,&quot;&quot;,
&quot;en&quot;, &quot;&quot;,
&quot;it&quot;, &quot;&quot;,
&quot;nl&quot;, &quot;&quot;,
&quot;fr&quot;,&quot;&quot;,
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Image URL</label>
    <type>Text</type>
</CustomField>