unpackaged/main/default/objects/Case/fields/Started_at__c.field-meta.xml
<CustomField>
    <fullName>Started_at__c</fullName>
    <description>first time worked on issue</description>
    <label>Started at</label>
    <type>DateTime</type>
</CustomField>