unpackaged/main/default/objects/Case/fields/stopped_until__c.field-meta.xml
<CustomField>
    <fullName>stopped_until__c</fullName>
    <label>Stopped Until</label>
    <type>Date</type>
</CustomField>