unpackaged/main/default/objects/Case/fields/Sub_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_2__c</fullName>
    <label>Sub Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1st Lvl Support</fullName>
            </value>
            <value>
                <fullName>2nd Lvl Accounting</fullName>
            </value>
            <value>
                <fullName>2nd Lvl Consultance</fullName>
            </value>
            <value>
                <fullName>2nd Lvl IT</fullName>
            </value>
            <value>
                <fullName>ABMAHNUNG</fullName>
            </value>
            <value>
                <fullName>Additional agreement</fullName>
            </value>
            <value>
                <fullName>Additional domain</fullName>
            </value>
            <value>
                <fullName>Additional option</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>API Collect Shop Reviews</fullName>
            </value>
            <value>
                <fullName>API Display Shop Reviews</fullName>
            </value>
            <value>
                <fullName>API Product Reviews</fullName>
            </value>
            <value>
                <fullName>Automatic Collection</fullName>
            </value>
            <value>
                <fullName>Automatic reply</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Cancellation (Widerruf)</fullName>
            </value>
            <value>
                <fullName>Cancellation confirmation</fullName>
            </value>
            <value>
                <fullName>Cancellation of payment agreement</fullName>
            </value>
            <value>
                <fullName>Change of payment mehthod or frequency</fullName>
            </value>
            <value>
                <fullName>Change payment method</fullName>
            </value>
            <value>
                <fullName>Charge transfer of contract</fullName>
            </value>
            <value>
                <fullName>Clarification Sales</fullName>
            </value>
            <value>
                <fullName>Collect reviews</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Confirmation transfer has been processed</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>