unpackaged/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceptance of application</fullName>
            </value>
            <value>
                <fullName>Accession to Contract</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Approval of contract</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Buyer Protection</fullName>
            </value>
            <value>
                <fullName>Calculation of Rating</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Certificate Page</fullName>
            </value>
            <value>
                <fullName>Checkout DIV</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>collect</fullName>
            </value>
            <value>
                <fullName>Collect Product Reviews</fullName>
            </value>
            <value>
                <fullName>Collect Shop Reviews</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Data update</fullName>
            </value>
            <value>
                <fullName>Debt collection/ Insolvency</fullName>
            </value>
            <value>
                <fullName>display</fullName>
            </value>
            <value>
                <fullName>Display Product Reviews</fullName>
            </value>
            <value>
                <fullName>Display Shop Reviews</fullName>
            </value>
            <value>
                <fullName>DIV</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Dunning</fullName>
            </value>
            <value>
                <fullName>Excellence</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Feature Requests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>