unpackaged/main/default/objects/Case/fields/Test_subject__c.field-meta.xml
<CustomField>
    <fullName>Test_subject__c</fullName>
    <formula>RIGHT( Case_Name__c, Len(Case_Name__c)-17)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>