unpackaged/main/default/objects/Case/fields/Timings__c.field-meta.xml
<CustomField>
    <fullName>Timings__c</fullName>
    <formula>IF( TEXT(Case_Deadline__c) != &quot;&quot;, &quot;Deadline: &quot; +   Deadline_color__c + BR(), &quot;&quot;) +
IF(NOT(ISBLANK(Started_at__c)) = TRUE, &quot;Started at: &quot; + TEXT(DATEVALUE(Started_at__c)),&quot;&quot;) + BR()+
IF( IsStopped = TRUE, &quot;Stopped Until: &quot; + TEXT(stopped_until__c) , &quot;&quot;)</formula>
    <label>Timings</label>
    <type>Text</type>
</CustomField>