unpackaged/main/default/objects/Case/fields/Upsell_reason_lost__c.field-meta.xml
<CustomField>
    <fullName>Upsell_reason_lost__c</fullName>
    <label>Upsell reason lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Created by mistake</fullName>
            </value>
            <value>
                <fullName>Features missing</fullName>
            </value>
            <value>
                <fullName>No reason mentioned</fullName>
            </value>
            <value>
                <fullName>Not reached</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Wrong person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>