unpackaged/main/default/objects/Case/fields/Upsell_Status__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Status__c</fullName>
    <label>Upsell Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect - 10</fullName>
            </value>
            <value>
                <fullName>Need analysis - 25</fullName>
            </value>
            <value>
                <fullName>Proposal sent - 35</fullName>
            </value>
            <value>
                <fullName>Negoti. &amp; Commit - 50</fullName>
            </value>
            <value>
                <fullName>Listen &amp; resolve - 80</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>