unpackaged/main/default/objects/Case/fields/Uses_eTrusted__c.field-meta.xml
<CustomField>
    <fullName>Uses_eTrusted__c</fullName>
    <formula>Account.uses_the_eTrusted_platform__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uses eTrusted</label>
    <type>Checkbox</type>
</CustomField>