unpackaged/main/default/objects/Case/fields/Warning_page__c.field-meta.xml
<CustomField>
    <fullName>Warning_page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for Compliance Page Layouts</description>
    <label>Warning page</label>
    <type>Checkbox</type>
</CustomField>