unpackaged/main/default/objects/Case/fields/Whitelist__c.field-meta.xml
<CustomField>
    <fullName>Whitelist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whitelist</label>
    <type>Checkbox</type>
</CustomField>