unpackaged/main/default/objects/Case/fields/Winback_forecast__c.field-meta.xml
<CustomField>
    <fullName>Winback_forecast__c</fullName>
    <description>extract number of winback status, divide through 100 and multiply with yearly price</description>
    <formula>((VALUE(LEFT(TEXT(Winback_Status__c),FIND(&quot;_&quot;,TEXT(Winback_Status__c))-1)))/100)* Yearly_price_of_new_offer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winback forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>