unpackaged/main/default/objects/Case/fields/Winback_Status__c.field-meta.xml
<CustomField>
    <fullName>Winback_Status__c</fullName>
    <label>Winback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0_Cancellation_registered</fullName>
                <default>true</default>
                <label>0% Cancellation registered</label>
            </value>
            <value>
                <fullName>20_Reasons</fullName>
                <label>20% Reasons</label>
            </value>
            <value>
                <fullName>50_Solutions</fullName>
                <label>50% Solutions</label>
            </value>
            <value>
                <fullName>80_Negotiating</fullName>
                <label>80% Negotiating</label>
            </value>
            <value>
                <fullName>100_Closed_Won</fullName>
                <label>100% Closed Won</label>
            </value>
            <value>
                <fullName>0_Closed_Lost</fullName>
                <label>0% Closed Lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>