unpackaged/main/default/objects/Case/fields/Yearly_price_of_new_offer__c.field-meta.xml
<CustomField>
    <fullName>Yearly_price_of_new_offer__c</fullName>
    <label>Yearly price of new offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>