unpackaged/main/default/objects/Case/fields/zendesk_run__c.field-meta.xml
<CustomField>
    <fullName>zendesk_run__c</fullName>
    <label>Zendesk Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>