unpackaged/main/default/objects/Case/fields/zz_assign_Lift_to_contract__c.field-meta.xml
<CustomField>
    <fullName>zz_assign_Lift_to_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zz_assign Lift to contract</label>
    <type>Checkbox</type>
</CustomField>