unpackaged/main/default/objects/Case/fields/zz_case_owner_team__c.field-meta.xml
<CustomField>
    <fullName>zz_case_owner_team__c</fullName>
    <formula>case_owner_team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz Case Owner Team</label>
    <type>Text</type>
</CustomField>