unpackaged/main/default/objects/Case/fields/zz_follow_up_relevant__c.field-meta.xml
<CustomField>
    <fullName>zz_follow_up_relevant__c</fullName>
    <formula>stopped_until__c = TODAY() &amp;&amp;  !ISPICKVAL(Status, &quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_follow_up_relevant</label>
    <type>Checkbox</type>
</CustomField>