unpackaged/main/default/objects/Case/fields/zz_follow_up_start__c.field-meta.xml
<CustomField>
    <fullName>zz_follow_up_start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zz_follow_up_start</label>
    <type>Checkbox</type>
</CustomField>