unpackaged/main/default/objects/Case/fields/zz_greeting_with_name__c.field-meta.xml
<CustomField>
    <fullName>zz_greeting_with_name__c</fullName>
    <formula>CASE( Contact.Salutation ,
&quot;Mr.&quot;, &quot;Sehr geehrter Herr &quot; +  Contact.LastName ,

&quot;Ms.&quot;, &quot;Sehr geehrte Frau &quot; + Contact.LastName ,
&quot;Sehr geehrte Damen und Herren&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_greeting_with_name</label>
    <type>Text</type>
</CustomField>