unpackaged/main/default/objects/Case/fields/zz_greeting_with_name_fr__c.field-meta.xml
<CustomField>
    <fullName>zz_greeting_with_name_fr__c</fullName>
    <formula>CASE( Contact.Salutation ,
&quot;Mr.&quot;, &quot;Bonjour Monsieur &quot; +  Contact.LastName ,

&quot;Ms.&quot;, &quot;Bonjour Madame &quot; + Contact.LastName ,
&quot;Madame, Monsieur&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_greeting_with_name_fr</label>
    <type>Text</type>
</CustomField>