unpackaged/main/default/objects/Case/fields/zz_new_assignee__c.field-meta.xml
<CustomField>
    <fullName>zz_new_assignee__c</fullName>
    <label>zz New Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>