unpackaged/main/default/objects/Case/fields/zz_Recipient_First_Mail__c.field-meta.xml
<CustomField>
    <fullName>zz_Recipient_First_Mail__c</fullName>
    <label>zz Recipient First Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>