unpackaged/main/default/objects/Case/fields/zz_Signatur_GDPR__c.field-meta.xml
<CustomField>
    <fullName>zz_Signatur_GDPR__c</fullName>
    <formula>Case(Contact.language__c,
&quot;de&quot;,IF(CONTAINS($UserRole.Name, &quot;Legal&quot;), HYPERLINK(&quot;https://legal.trustedshops.com/privacy&quot;, &quot;Datenschutzinformationen&quot;,&quot;_self&quot;), HYPERLINK(&quot;https://www.trustedshops.de/impressum#datenschutz&quot;,&quot;Datenschutzinformationen&quot;,&quot;_self&quot;)),
&quot;en&quot;,HYPERLINK(&quot;https://business.trustedshops.com/consent&quot;, &quot;Data privacy&quot;,&quot;_self&quot;),
&quot;fr&quot;,HYPERLINK(&quot;https://business.trustedshops.com/consent&quot;, &quot;Protection des Données&quot;,&quot;_self&quot;),
&quot;nl&quot;,HYPERLINK(&quot;https://business.trustedshops.com/consent&quot;, &quot; Privacyverklaring&quot;,&quot;_self&quot;),
&quot;it&quot;,HYPERLINK(&quot;https://business.trustedshops.com/consent&quot;, &quot;Dichiarazione sulla privacy&quot;,&quot;_self&quot;),
&quot;pl&quot;,HYPERLINK(&quot;https://business.trustedshops.com/consent&quot;, &quot;Polityka prywatnosci&quot;,&quot;_self&quot;),
&quot;es&quot;, HYPERLINK(&quot;https://business.trustedshops.com/consent&quot;, &quot;Protección de datos&quot;,&quot;_self&quot;),
&quot;&quot;,
IF(
CONTAINS($UserRole.Name, &quot;Legal&quot;), HYPERLINK(&quot;https://legal.trustedshops.com/privacy&quot;, &quot;Datenschutzinformationen&quot;,&quot;_self&quot;),
IF(
AND(NOT(CONTAINS($UserRole.Name, &quot;Legal&quot;)), OR($UserRole.Name = &quot;CX Manager Market 1&quot;, CONTAINS($UserRole.Name, &quot;High Touch 1 Market 1&quot;), CONTAINS($UserRole.Name, &quot;Account Management&quot;),
CONTAINS($UserRole.Name, &quot;Mid Touch 1 Market 1&quot;), CONTAINS($UserRole.Name, &quot;Tech Touch 1 Market 1&quot;), CONTAINS($UserRole.Name, &quot;Contract&quot;))),
HYPERLINK(&quot;https://www.trustedshops.de/impressum#datenschutz&quot;, &quot;Datenschutzinformationen&quot;,&quot;_self&quot;),&quot;&quot;)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_Signatur_GDPR</label>
    <type>Text</type>
</CustomField>