unpackaged/main/default/objects/Case/fields/zz_Signature_Closing__c.field-meta.xml
<CustomField>
    <fullName>zz_Signature_Closing__c</fullName>
    <formula>CASE( Contact.language__c ,
&quot;de&quot;, if( CONTAINS($UserRole.Name, &quot;Contract&quot;), &quot;Mit freundlichen Grüßen&quot;, &quot;&quot;)+ BR(),
&quot;nl&quot;,&quot;Met vriendelijke groet,&quot; + BR(),
&quot;en&quot;,&quot;Best regards,&quot; + BR(),
&quot;it&quot;,&quot;Cordiali Saluti,&quot; + BR(),
&quot;es&quot;,&quot;Saludos,&quot;+ BR(),
&quot;fr&quot;,&quot;Bien cordialement,&quot;+ BR(),
&quot;pl&quot;,&quot;Pozdrawiam&quot;+ BR(),
&quot;pt&quot;,&quot;Atenciosamente&quot;+ BR(),
&quot;&quot; + BR()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_Signature_Closing</label>
    <type>Text</type>
</CustomField>