unpackaged/main/default/objects/Case/fields/zz_Signature_Department__c.field-meta.xml
<CustomField>
    <fullName>zz_Signature_Department__c</fullName>
    <formula>IF ($User.Department != &quot;&quot;, $User.Department  + BR() , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_Signature_Department</label>
    <type>Text</type>
</CustomField>